--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
   "type": "module",
   "dependencies": {
     "@qdrant/js-client-rest": "^1.8.1",
+    "@types/uuid": "^9.0.8",
     "axios": "^1.6.8",
     "compute-cosine-similarity": "^1.1.0",
-    "ollama": "^0.5.0"
+    "ollama": "^0.5.0",
+    "uuid": "^9.0.1"
   }
 }
